# reverse-turing-game-classifier

./: .gitattributes  README.md  create_plots.py  encode_data.ipynb  main.py  pyproject.toml  requirements_freeze.txt  retrieve_game_ids.py
analysis/: classifier_evaluation.ipynb  data_analysis.ipynb
data/: 190325_data.pkl  false_game_ids_threshold_3.pkl  game_ids.pkl  games_not_trained_on.pkl  labels.pkl  user_ids.pkl
experiments/: default.yaml  run01.yaml  run02.yaml  run03.yaml  run04.yaml  run05.yaml  run06.yaml  run07.yaml  run08.yaml  run09.yaml  run10.yaml  run11.yaml  run12.yaml  run13.yaml  run14.yaml  run15.yaml  run16.yaml  run17.yaml  run18.yaml  run19.yaml  run20.yaml  run21.yaml  run22.yaml  run23.yaml  run24.yaml  run25.yaml  run26.yaml  run27.yaml  run28.yaml  run29.yaml  run30.yaml  run31.yaml  run32.yaml  run33.yaml  run34.yaml  run35.yaml  run36.yaml
src/: classifier.py  models.py  trainer.py  utils.py
trained_models/: run01.pth  run02.pth  run03.pth  run04.pth  run05.pth  run06.pth  run07.pth  run08.pth  run09.pth  run10.pth  run11.pth  run12.pth  run13.pth  run14.pth  run15.pth  run16.pth  run17.pth  run18.pth  run19.pth  run20.pth  run21.pth  run22.pth  run23.pth  run24.pth  run25.pth  run26.pth  run27.pth  run28.pth  run29.pth  run30.pth  run31.pth  run32.pth  run33.pth  run34.pth  run35.pth  run36.pth
training_information/: run01.pkl  run02.pkl  run03.pkl  run04.pkl  run05.pkl  run06.pkl  run07.pkl  run08.pkl  run09.pkl  run10.pkl  run11.pkl  run12.pkl  run13.pkl  run14.pkl  run15.pkl  run16.pkl  run17.pkl  run18.pkl  run19.pkl  run20.pkl  (+16 more)
