[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bachelorThesis"
version = "0.1.0"
description = "Bachelor thesis framework"
authors = [
    { name="Viktor Szolga", email="viktor.emil.szolga@gmail.com" }
]
dependencies = [
    "torch>=2.0",
    "torchmetrics>=1.0",
    "scikit-learn>=1.3",
    "numpy>=1.25",
    "tqdm>=4.65",
    "matplotlib>=3.8",
    "omegaconf>=2.3",
    "openai>=1.0",
    "sentence-transformers>=2.2"
]